--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -34,7 +34,7 @@
             [class.highlight]="counter % 2 == 0"></h3>
       </div>
 
-      <div id="social-icons" class="pull-right social-icon">
+      <div id="social-icons" *ngIf="counter % 2 == 0" class="pull-right social-icon">
         <a href="https://www.facebook.com/will.fans" title="Will 保哥的技術交流中心" target="_blank">
           <img src="/assets/images/facebook.png">
         </a>
