完成 @Output() 事件宣告

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         <!-- <pre>{{ data | json }}</pre> -->
 
         <!-- Article START-->
-        <app-article *ngFor="let item of data" [item]="item"></app-article>
+        <app-article *ngFor="let item of data" [item]="item" (delete)="doDelete($event)"></app-article>
         <!-- Article END-->
 
       </div>
