--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -8,6 +8,7 @@
       <span class="post-author"><i class="glyphicon glyphicon-user"></i><a href="http://blog.miniasp.com/author/will.aspx">{{item.author}}</a></span>
       <span class="post-category"><i class="glyphicon glyphicon-folder-close"></i>
         <a [href]="item['category-link']">{{item.category}}</a></span>
+      <input type="button" value="刪除文章" (click)="doDelete()">
     </div>
   </header>
   <section class="post-body text" [innerHTML]="item.summary">
