--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,7 +1,7 @@
 <article class="post" id="post0">
   <header class="post-header">
     <h2 class="post-title">
-      <a [href]="item.href">{{item.title|uppercase}}</a>
+      <a [href]="item.href">{{item.title|mask:10}}</a>
       {{ 4937298473 | number }}
     </h2>
     <div class="post-info clearfix">
